# stellar-manager

./: .gitignore  CMakeLists.txt  README.md  build.sh  test_build.sh
data/: constellation.csv
include/: client.h  constellation.h  constellationFilters.h  dataLoader.h  vetor.h
include/core/: vetor.h  vetor.hpp
include/infra/: dataLoader.h  dataLoader.hpp
include/models/: constellation.hpp
include/services/: constellationFilters.h  constellationFilters.hpp
include/ui/: interface.h  interface.hpp
src/: client.cpp  constellation.cpp  constellationFilters.cpp  dataLoader.cpp  main.cpp  vetor.cpp
src/core/: vetor.cpp
src/infra/: dataLoader.cpp
src/models/: constellation.cpp
src/services/: constellationFilters.cpp
src/ui/: interface.cpp
test/: app.cpp  test.cpp
